summary: Saiba o que há de novo no Amazon FSx for NetApp ONTAP. 
---
= Novidades do Amazon FSx for NetApp ONTAP
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Saiba o que há de novo no FSx para ONTAP.



== 11 de novembro de 2025



=== Suporte para replicação entre sistemas ONTAP locais e sistemas de arquivos FSx para ONTAP.

A replicação de dados está disponível entre um sistema ONTAP local e um sistema de arquivos FSx para ONTAP na página Sistemas do NetApp Console .

link:https://docs.netapp.com/us-en/storage-management-fsx-ontap/use/task-manage-fsx-systems.html#replicate-data["Replicar dados"]



== 06 de outubro de 2025



=== BlueXP agora é NetApp Console

O NetApp Console, criado com base na base aprimorada e reestruturada do BlueXP , fornece gerenciamento centralizado do armazenamento NetApp e do NetApp Data Services em ambientes locais e na nuvem em nível empresarial, fornecendo insights em tempo real, fluxos de trabalho mais rápidos e administração simplificada, que é altamente segura e compatível.

Para obter detalhes sobre o que mudou, consulte olink:https://docs.netapp.com/us-en/console-relnotes/index.html["Notas de versão do NetApp Console ."^]



== 03 de agosto de 2025



=== Melhorias na guia Relacionamentos de replicação

Adicionamos várias colunas novas à tabela de relacionamentos de replicação para fornecer mais informações sobre seus relacionamentos de replicação na guia *Relacionamentos de replicação*. A tabela agora inclui as seguintes colunas:

* Política do SnapMirror
* Sistema de arquivos de origem
* Sistema de arquivos de destino
* Estado do relacionamento
* Último horário de transferência




== 14 de julho de 2025



=== Suporte para replicação de dados entre dois sistemas de arquivos FSx para ONTAP

A replicação de dados agora está disponível entre dois sistemas de arquivos FSx para ONTAP a partir da tela no console BlueXP .
