@@ -488,7 +488,6 @@
   <block id="580649b6592437bd283b108bcef22b7d" category="inline-link">Aprenda a gerenciar um sistema de arquivos usando o NetApp Workloads</block>
   <block id="14aa34371e663d81da2ce38739cae4bc" category="paragraph"><block ref="14aa34371e663d81da2ce38739cae4bc" category="inline-link-rx"></block></block>
   <block id="9a7d7fe4ea2506122f2a5355c685706e" category="section-title">Gerenciar um sistema de arquivos usando o ONTAP System Manager</block>
-  <block id="af8bf7a0f182ae1d5b8be3687794ca0c" category="paragraph">Você pode gerenciar um sistema de arquivos FSx para ONTAP diretamente do Console usando a interface do ONTAP System Manager.  Um agente de console é necessário para usar o System Manager.</block>
   <block id="be0bf2e3af6b03378bb493466f3c335f" category="section-title">Gerenciar um sistema de arquivos usando o Amazon CloudFormation</block>
   <block id="e211b2db96a2f5b2b2868517a76988c8" category="paragraph">Você pode provisionar e gerenciar o FSx para recursos do sistema de arquivos ONTAP (volumes, compartilhamentos CIFS, políticas de exportação e muito mais) usando o Amazon CloudFormation.</block>
   <block id="12980bf72a2406244df6aef483456919" category="inline-link-macro">Repositório GitHub do provedor NetApp CloudFormation FSx para ONTAP</block>
@@ -716,4 +715,11 @@
   <block id="5f72153c430537b3e27deff7329da0d0" category="list-text">Na página Sistemas do NetApp Console , arraste o sistema de arquivos FSx for ONTAP de origem ou o sistema ONTAP local para cima do sistema de arquivos FSx for ONTAP de destino e selecione *Replicação*.</block>
   <block id="1760c97f466ea374318a8c0bedcb2aff" category="section-title">11 de novembro de 2025</block>
   <block id="1387404b18ce63590b24c55d54d3ff43" category="paragraph">A replicação de dados está disponível entre um sistema ONTAP local e um sistema de arquivos FSx para ONTAP na página Sistemas do NetApp Console .</block>
+  <block id="f3bb71c095338a2af8e23c9ae07072bf" category="doc">O Gerenciador de Sistemas está disponível ao usar um link do AWS Lambda.</block>
+  <block id="b8cda09456e64356f2c1763e3e53d0af" category="inline-link-macro">Aprenda a usar links para operações avançadas do ONTAP.</block>
+  <block id="8a730f2606f493b8d797f6c96c460037" category="paragraph">A interface do ONTAP System Manager pode ser usada com um link do AWS Lambda para executar operações avançadas do ONTAP . Isso oferece uma alternativa ao uso de um agente de console com o System Manager para gerenciar um sistema de arquivos FSx para ONTAP diretamente do console. <block ref="3b6bcb03237efb7ff1ce82387184b37d" category="inline-link-macro-rx"></block></block>
+  <block id="2c0d3ac197a4a5c6ec443759849c532e" category="paragraph">Você pode gerenciar um sistema de arquivos FSx para ONTAP diretamente do Console usando a interface do ONTAP System Manager. É necessário um agente de console ou um link do AWS Lambda para usar o System Manager.</block>
+  <block id="eedc611f4a0b9ac93cb166f88e46128a" category="inline-link-macro">Aprenda a usar links</block>
+  <block id="61b7909f43b8222037001004e52dc71c" category="paragraph"><block ref="61b7909f43b8222037001004e52dc71c" category="inline-link-macro-rx"></block></block>
+  <block id="b566b4df138c2254f68b7631cba29c1d" category="section-title">17 de novembro de 2025</block>
 </blocks>
